mobile menu phone number doesn't fit fix

--- a/webroot/scss/inc/header_mobile_menu.scss
+++ b/webroot/scss/inc/header_mobile_menu.scss
@@ -284,3 +284,12 @@ div.mobile-menu-header-overlay {
 		}
 	}
 }
+
+// tiny phone
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (max-device-height: 500px) {
+	div.mobile-menu {
+		.phone-number {
+			display: none;
+		}
+	}
+}
